ATLAS-2679: Line & Subline - do not allow gaps